# ctrader-api-client

./: .pre-commit-config.yaml  404.html  Justfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml
api/accounts/: index.html
api/client/: index.html
api/enums/: index.html
api/events/: index.html
api/market-data/: index.html
api/models/: index.html
api/symbols/: index.html
api/trading/: index.html
docs/: getting-started.md  index.md
docs/api/: accounts.md  client.md  enums.md  events.md  market-data.md  models.md  symbols.md  trading.md
getting-started/: index.html
protos/: SOURCE  update.sh
scripts/: fix_proto_imports.py
search/: search_index.json
src/ctrader_api_client/: __init__.py  client.py  config.py  enums.py  exceptions.py
src/ctrader_api_client/_internal/: __init__.py  messages.py  serialization.py
src/ctrader_api_client/_internal/proto/: OpenApiCommonMessages.py  OpenApiCommonModelMessages.py  OpenApiMessages.py  OpenApiModelMessages.py  __init__.py
src/ctrader_api_client/api/: __init__.py  accounts.py  market_data.py  symbols.py  trading.py
src/ctrader_api_client/auth/: __init__.py  credentials.py  manager.py
src/ctrader_api_client/connection/: __init__.py  heartbeat.py  protocol.py  transport.py
src/ctrader_api_client/events/: __init__.py  emitter.py  router.py  types.py
src/ctrader_api_client/models/: __init__.py  _base.py  account.py  deal.py  market_data.py  order.py  position.py  requests.py  symbol.py
tests/unit/: test_client.py  test_config.py
tests/unit/_internal/: test_messages.py  test_serialization.py
tests/unit/api/: conftest.py  test_accounts.py  test_market_data_api.py  test_symbols.py  test_trading.py
tests/unit/auth/: test_credentials.py  test_manager.py
tests/unit/connection/: test_heartbeat.py  test_protocol.py  test_transport.py
tests/unit/events/: test_emitter.py  test_router.py  test_types.py
tests/unit/models/: test_account.py  test_deal.py  test_market_data.py  test_order.py  test_position.py  test_requests.py  test_symbol.py
