[project]
name = "ctrader-api-client"
version = "0.2.1"
description = "API Client to interact with the cTrader Open API spec"
readme = "README.md"
authors = [
    { name = "Elio", email = "elioachukri@pm.me" }
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.13.0",
    "betterproto[compiler]>=1.2.5",
    "pydantic>=2.12.5",
    "tenacity>=9.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
    "pytest>=9.0.3",
    "ruff>=0.15.9",
    "zuban>=0.7.0",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "I",    # sort imports
    "PTH",  # Use pathlib instead of os.path
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "B",    # bugbear
    "I",    # isort (import sorting)
    "UP",   # pyupgrade
    "C4",   # comprehensions
    "ARG",  # Flags unused function arguments
    "RUF022", # Unsorted __all__ blocks
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["E741"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
docstring-code-format = true


[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["method-assign"]
